<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading data from the Google Book API</string>
    <string name="search">search</string>
    <string name="no_search_data">Please insert valid search data</string>
    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author (s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_isbn">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
</resources>
